--- a/Project.html
+++ b/Project.html
@@ -5,24 +5,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DmIdJgXF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/B37iiHWd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DDFKJehT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DWdAOxtQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/apL3id5y.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DqMNS5AM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CQ7NjgbA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DQU_BeNS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/q1uPNwzO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bik7cJ9h.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BdnvQOsf.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B37q71Fd.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DGoVweh4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Wt1-2dob.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.B0m8poCq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dd0d9_Vb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CpfLNiaB.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DyR-Z5PG.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CN6vCBXI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D5td2Ix7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BJZaEuHy.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/5HOrd2lw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BPjcHWtB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.B8t3zgvK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CHSGCjcG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bzlsns2q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/lDHG2_yA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/wh5EvfPl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Bj1mbKBr.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CYVJVkor.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BIMLuOf1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C0WCr0ZI.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DW8kD32b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/hJLHIa_t.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/dKKRBauR.js">
 	</head>
 	<body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
 	
@@ -33,15 +32,15 @@
 			
 			<script>
 				{
-					__sveltekit_1xf7hoy = {
+					__sveltekit_rxmnqx = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DmIdJgXF.js"),
-						import("./_app/immutable/entry/app.DqMNS5AM.js")
+						import("./_app/immutable/entry/start.CN6vCBXI.js"),
+						import("./_app/immutable/entry/app.B8t3zgvK.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
