研究テーマ変更

--- a/Members.html
+++ b/Members.html
@@ -64,7 +64,7 @@
 								<div class="h-2"></div>
 								<p class="text-gray-700 text-base leading-relaxed">自己紹介：<br>LDHとBMSGのアーティストにハマってます🔥</p> 
 								<div class="h-2"></div>
-								<p class="text-gray-600 text-base">研究テーマ：<br>識別性能向上のための Co-Attention Fusion Network を用いたマルチビュー画像分類</p>
+								<p class="text-gray-600 text-base">研究テーマ：<br>センシング画像比較を用いた工芸品調査</p>
 								<div class="h-5"></div>
 							</div>
 						</div> 
@@ -86,7 +86,7 @@
 								<div class="h-2"></div> 
 								<p class="text-gray-700 text-base leading-relaxed">自己紹介：<br>学部では表情解析による感情推定をしていました。趣味は映画鑑賞、音楽鑑賞、聴く読書など色々です。よろしくお願いします!</p> 
 								<div class="h-2"></div> 
-								<p class="text-gray-600 text-base">研究テーマ：<br>画像認識による金属遺物の腐食度判定と脱塩処理の必要性予測</p>
+								<p class="text-gray-600 text-base">研究テーマ：<br>考古遺物調査への情報処理技術の応用</p>
 								<div class="h-5"></div>
 							</div>
 						</div>
