直開き対応編集前

--- a/Members.html
+++ b/Members.html
@@ -30,7 +30,7 @@
 			<header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
 				<div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
 					<a href="/" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-						<img src="/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+						<img src="log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
 						<span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">非破壊センシング研究室</span>
 					</a> 
 					<button class="sm:hidden text-2xl text-gray-800"></button> 
