--- a/Members.html
+++ b/Members.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
+		<link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
 		<link rel="modulepreload" href="./_app/immutable/entry/start.CN6vCBXI.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/D5td2Ix7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/BJZaEuHy.js">
@@ -26,22 +27,25 @@
 	<body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
 	
 		<div style="display: contents">
-			<div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('/slide2.jpg')"></div> 
+			<div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('./slide2.jpg')"></div> 
 			<header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
 				<div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
-					<a href="/" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-						<img src="log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
-						<span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">非破壊センシング研究室</span>
-					</a> 
-					<button class="sm:hidden text-2xl text-gray-800"></button> 
-					<nav class="hidden sm:flex flex-nowrap justify-end gap-x-4 sm:gap-x-6 text-[1rem] sm:text-lg md:text-xl font-medium whitespace-nowrap">
-						<a href="/Introduction" class="text-gray-500 hover:text-black">Introduction</a>
-						<a href="/Project" class="text-gray-500 hover:text-black">Project</a>
-						<a href="/Members" class="text-gray-500 hover:text-black">Members</a>
-						<a href="/Access" class="text-gray-500 hover:text-black">Access</a>
-					</nav>
-				</div> 
-			</header> 
+				  <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
+					<img src="./log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+					<span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
+					  非破壊センシング研究室
+					</span>
+				  </a>
+				  <button class="sm:hidden text-2xl text-gray-800">☰</button>
+		
+				  <nav class="hidden sm:flex flex-nowrap justify-end gap-x-4 sm:gap-x-6 text-[1rem] sm:text-lg md:text-xl font-medium whitespace-nowrap">
+					<a href="./Introduction.html" class="text-gray-500 hover:text-black">Introduction</a>
+					<a href="./Project.html" class="text-gray-500 hover:text-black">Project</a>
+					<a href="./Members.html" class="text-gray-500 hover:text-black">Members</a>
+					<a href="./Access.html" class="text-gray-500 hover:text-black">Access</a>
+				  </nav>
+				</div>
+			  </header>
 			<div class="pt-40 pb-16 px-6 sm:px-16">
 				<h1 class="text-4xl sm:text-5xl font-bold text-white text-left drop-shadow-xl">Members</h1>
 			</div> 
@@ -58,7 +62,7 @@
 					<section class="space-y-8">
 						<h2 class="text-2xl sm:text-3xl font-bold text-gray-800 border-b pb-2">M1</h2> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="/FukuchiTshubasa.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
+							<img src="./FukuchiTshubasa.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">福地 翼（Fukuchi Tsubasa）</h3> 
 								<div class="h-2"></div>
@@ -69,7 +73,7 @@
 							</div>
 						</div> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="/MatshunagaJotaro.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
+							<img src="./MatshunagaJotaro.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
 							<div class="space-y-2 max-w-3xl">
 							<h3 class="text-xl font-semibold text-gray-800">松永 丞太郎（Matsunaga Jotaro）</h3>
 							<div class="h-2"></div> 
@@ -80,7 +84,7 @@
 							</div>
 						</div>
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="/yamadakeigo.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
+							<img src="./yamadakeigo.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">山田 圭吾（Yamada Keigo）</h3>
 								<div class="h-2"></div> 
@@ -94,33 +98,33 @@
 					<section class="space-y-8">
 						<h2 class="text-2xl sm:text-3xl font-bold text-gray-800 border-b pb-2">B4</h2> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="KasutaSora.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
+							<img src="./KasutaSora.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">糟谷 空（Kasuya Sora）</h3>
 								<div class="h-2"></div>
-								<p class="text-gray-700 text-base leading-relaxed">山登りとゲームが好きです。</p>
+								<p class="text-gray-700 text-base leading-relaxed">自己紹介：<br>山登りとゲームが好きです。</p>
 								<div class="h-2"></div>
-								<p class="text-gray-600 text-base">研究テーマ：検討中</p> 
+								<p class="text-gray-600 text-base">研究テーマ：<br>検討中</p> 
 								<div class="h-5"></div>
 							</div>
 						</div>
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="/KatoKeisuke.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
+							<img src="./KatoKeisuke.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">加藤 圭介（Kato Keisuke）</h3>
-								<div class="h-2"></div> <p class="text-gray-700 text-base leading-relaxed">遠回りをして帰ることが好きです。</p>
-								<div class="h-2"></div> <p class="text-gray-600 text-base">研究テーマ：画像比較を用いた象嵌工芸品の成分分析(予定)</p>
+								<div class="h-2"></div> <p class="text-gray-700 text-base leading-relaxed">自己紹介：<br>遠回りをして帰ることが好きです。</p>
+								<div class="h-2"></div> <p class="text-gray-600 text-base">研究テーマ：<br>画像比較を用いた象嵌工芸品の成分分析(予定)</p>
 								<div class="h-5"></div>
 							</div>
 						</div> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="TomimatsuHaruki.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
+							<img src="./TomimatsuHaruki.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">富松 大輝（Tomimatsu Haruki）</h3> 
 								<div class="h-2"></div>
-								<p class="text-gray-700 text-base leading-relaxed">アメフト部で主将しています.声出しと力仕事は任せてください。</p> 
+								<p class="text-gray-700 text-base leading-relaxed">自己紹介：<br>アメフト部で主将しています.声出しと力仕事は任せてください。</p> 
 								<div class="h-2"></div>
-								<p class="text-gray-600 text-base">研究テーマ：検討中</p> 
+								<p class="text-gray-600 text-base">研究テーマ：<br>検討中</p> 
 								<div class="h-5"></div>
 							</div>
 						</div>
