--- a/Access.html
+++ b/Access.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="./favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
   <link rel="modulepreload" href="./_app/immutable/entry/start.CN6vCBXI.js">
   <link rel="modulepreload" href="./_app/immutable/chunks/D5td2Ix7.js">
   <link rel="modulepreload" href="./_app/immutable/chunks/BJZaEuHy.js">
@@ -26,22 +27,23 @@
 
 <body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
   <div style="display: contents">
-    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('/slide2.jpg')"></div>
+    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('./slide2.jpg')"></div>
 
     <header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
       <div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
-        <a href="/" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-          <img src="/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
-          <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">非破壊センシング研究室</span>
+        <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
+          <img src="./log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+          <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
+            非破壊センシング研究室
+          </span>
         </a>
-
         <button class="sm:hidden text-2xl text-gray-800">☰</button>
 
         <nav class="hidden sm:flex flex-nowrap justify-end gap-x-4 sm:gap-x-6 text-[1rem] sm:text-lg md:text-xl font-medium whitespace-nowrap">
-          <a href="/Introduction" class="text-gray-500 hover:text-black">Introduction</a>
-          <a href="/Project" class="text-gray-500 hover:text-black">Project</a>
-          <a href="/Members" class="text-gray-500 hover:text-black">Members</a>
-          <a href="/Access" class="text-gray-500 hover:text-black">Access</a>
+          <a href="./Introduction.html" class="text-gray-500 hover:text-black">Introduction</a>
+          <a href="./Project.html" class="text-gray-500 hover:text-black">Project</a>
+          <a href="./Members.html" class="text-gray-500 hover:text-black">Members</a>
+          <a href="./Access.html" class="text-gray-500 hover:text-black">Access</a>
         </nav>
       </div>
     </header>
