--- a/Project.html
+++ b/Project.html
@@ -5,6 +5,7 @@
   <link rel="icon" href="./favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
   <link rel="modulepreload" href="./_app/immutable/entry/start.CN6vCBXI.js">
   <link rel="modulepreload" href="./_app/immutable/chunks/D5td2Ix7.js">
   <link rel="modulepreload" href="./_app/immutable/chunks/BJZaEuHy.js">
@@ -28,22 +29,24 @@
   <div style="display: contents">
 
     <!-- 背景画像 -->
-    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('/slide2.jpg')"></div>
+    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('./slide2.jpg')"></div>
 
     <!-- ヘッダー -->
     <header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
       <div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
-        <a href="/" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-          <img src="/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
-          <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">非破壊センシング研究室</span>
+        <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
+          <img src="./log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+          <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
+            非破壊センシング研究室
+          </span>
         </a>
         <button class="sm:hidden text-2xl text-gray-800">☰</button>
 
         <nav class="hidden sm:flex flex-nowrap justify-end gap-x-4 sm:gap-x-6 text-[1rem] sm:text-lg md:text-xl font-medium whitespace-nowrap">
-          <a href="/Introduction" class="text-gray-500 hover:text-black">Introduction</a>
-          <a href="/Project" class="text-gray-500 hover:text-black">Project</a>
-          <a href="/Members" class="text-gray-500 hover:text-black">Members</a>
-          <a href="/Access" class="text-gray-500 hover:text-black">Access</a>
+          <a href="./Introduction.html" class="text-gray-500 hover:text-black">Introduction</a>
+          <a href="./Project.html" class="text-gray-500 hover:text-black">Project</a>
+          <a href="./Members.html" class="text-gray-500 hover:text-black">Members</a>
+          <a href="./Access.html" class="text-gray-500 hover:text-black">Access</a>
         </nav>
       </div>
     </header>
@@ -65,7 +68,7 @@
             本プロジェクトでは、計測装置の改良と、多周波非破壊検査データの比較解析を高度化します。
           </p>
           <div class="w-full">
-            <img src="/prj1.png" alt="分析・センシング" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
+            <img src="./prj1.png" alt="分析・センシング" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
             <p class="text-sm text-gray-600 text-center mt-2">▲ マイクロ波センサーと解析結果の可視化イメージ</p>
           </div>
         </div>
@@ -79,7 +82,7 @@
           </p>
 
           <div class="space-y-2">
-            <img src="/project_nabunken-objects.jpg" alt="飛鳥寺塔心礎埋納物" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
+            <img src="./project_nabunken-objects.jpg" alt="飛鳥寺塔心礎埋納物" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
             <p class="text-lg font-semibold text-gray-700 text-center">飛鳥寺塔心礎埋納物（飛鳥寺跡第三次調査　塔心礎出土品　集合）</p>
             <p class="text-sm text-gray-600 text-center">
               <a href="https://sitereports.nabunken.go.jp/ja/cultural-data-repository/66" class="underline hover:text-black" target="_blank" rel="noopener noreferrer">
@@ -103,7 +106,7 @@
           </p>
 
           <div class="space-y-2 flex flex-col items-center mt-30">
-            <img src="/prj2-2.png" alt="出土品AI解析2" class="rounded-lg shadow-md w-full max-w-md object-contain bg-white">
+            <img src="./prj2-2.png" alt="出土品AI解析2" class="rounded-lg shadow-md w-full max-w-md object-contain bg-white">
             <p class="text-lg font-semibold text-gray-700 text-center">
               高野孟により提案された「日本＝パチンコ台受け皿モデル」
             </p>
