--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./favicon.png" />
+  <link rel="icon" href="images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
@@ -29,8 +29,8 @@
 <body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
   <div style="display: contents">
 
-    <div class="bg-layer svelte-1dhz25k" style="background-image: url('./slide2.jpg'); opacity: 1;"></div>
-    <div class="bg-layer bg-top svelte-1dhz25k" style="background-image: url('./slide1.jpg'); opacity: 1;"></div>
+    <div class="bg-layer svelte-1dhz25k" style="background-image: url('./images/slide2.jpg'); opacity: 1;"></div>
+    <div class="bg-layer bg-top svelte-1dhz25k" style="background-image: url('./images/slide1.jpg'); opacity: 1;"></div>
 
     <div class="min-h-[200vh] relative">
       <div class="h-screen"></div>
@@ -38,7 +38,7 @@
       <header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
         <div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
           <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-            <img src="./log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+            <img src="images/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
             <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
               非破壊センシング研究室
             </span>
