--- a/Introduction.html
+++ b/Introduction.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="favicon.png" />
+  <link rel="icon" href="./images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
@@ -28,12 +28,12 @@
 <body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
   <div style="display: contents">
 
-    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('slide2.jpg')"></div>
+    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('./images/slide2.jpg')"></div>
 
     <header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
       <div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
         <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-          <img src="./log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+          <img src="./images/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
           <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
             非破壊センシング研究室
           </span>
@@ -92,7 +92,7 @@
             </div>
 
             <div class="mt-6">
-              <img src="./zu1.jpg" alt="尾形光琳の技法分析図" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
+              <img src="./images/zu1.jpg" alt="尾形光琳の技法分析図" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
               <p class="text-sm text-gray-600 text-center mt-2">メトロポリタン美術館（NY, USA)での尾形光琳作「八橋図屏風」の調査例</p>
             </div>
 
@@ -116,7 +116,7 @@
           </div>
 
           <div class="mt-6">
-            <img src="./giotto.jpg" alt="ジョット作品調査例" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
+            <img src="./images/giotto.jpg" alt="ジョット作品調査例" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
             <p class="text-sm text-gray-600 text-center mt-2">ウフィッツィ美術館（Firenze, Italia)でのジョット作「バディア祭壇画」の調査例</p>
           </div>
 
