--- a/Project.html
+++ b/Project.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./favicon.png" />
+  <link rel="icon" href="./images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
@@ -29,13 +29,13 @@
   <div style="display: contents">
 
     <!-- 背景画像 -->
-    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('./slide2.jpg')"></div>
+    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('./images/slide2.jpg')"></div>
 
     <!-- ヘッダー -->
     <header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
       <div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
         <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-          <img src="./log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+          <img src="./images/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
           <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
             非破壊センシング研究室
           </span>
@@ -76,7 +76,7 @@
             本プロジェクトでは、計測装置の改良と、多周波非破壊検査データの比較解析を高度化します。
           </p>
           <div class="w-full">
-            <img src="./prj1.png" alt="分析・センシング" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
+            <img src="./images/prj1.png" alt="分析・センシング" class="rounded-lg shadow-md w-full max-w-2xl mx-auto object-contain bg-white">
             <p class="text-sm text-gray-600 text-center mt-2">▲ マイクロ波センサーと解析結果の可視化イメージ</p>
           </div>
         </div>
@@ -114,7 +114,7 @@
           </p>
 
           <div class="space-y-2 flex flex-col items-center mt-30">
-            <img src="./prj2-2.png" alt="出土品AI解析2" class="rounded-lg shadow-md w-full max-w-md object-contain bg-white">
+            <img src="./images/prj2-2.png" alt="出土品AI解析2" class="rounded-lg shadow-md w-full max-w-md object-contain bg-white">
             <p class="text-lg font-semibold text-gray-700 text-center">
               高野孟により提案された「日本＝パチンコ台受け皿モデル」
             </p>
