./を外し、グラデーション追加

--- a/Publications.html
+++ b/Publications.html
@@ -2,59 +2,56 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="./favicon.png" />
+  <link rel="icon" href="images/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
-  <link rel="modulepreload" href="./_app/immutable/entry/start.CN6vCBXI.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/D5td2Ix7.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/BJZaEuHy.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/5HOrd2lw.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/BPjcHWtB.js">
-  <link rel="modulepreload" href="./_app/immutable/entry/app.B8t3zgvK.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/CHSGCjcG.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/Bzlsns2q.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/lDHG2_yA.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/wh5EvfPl.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/Bj1mbKBr.js">
-  <link rel="modulepreload" href="./_app/immutable/nodes/0.CYVJVkor.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/BIMLuOf1.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/C0WCr0ZI.js">
-  <link rel="modulepreload" href="./_app/immutable/nodes/8.7-YJqs2b.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/DJ4Ea6W_.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/hJLHIa_t.js">
-  <link rel="modulepreload" href="./_app/immutable/chunks/dKKRBauR.js">
+  <link href="_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
+  <link rel="modulepreload" href="_app/immutable/entry/start.CN6vCBXI.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/D5td2Ix7.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/BJZaEuHy.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/5HOrd2lw.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/BPjcHWtB.js">
+  <link rel="modulepreload" href="_app/immutable/entry/app.B8t3zgvK.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/CHSGCjcG.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/Bzlsns2q.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/lDHG2_yA.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/wh5EvfPl.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/Bj1mbKBr.js">
+  <link rel="modulepreload" href="_app/immutable/nodes/0.CYVJVkor.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/BIMLuOf1.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/C0WCr0ZI.js">
+  <link rel="modulepreload" href="_app/immutable/nodes/5.Cywm4_Y0.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/hJLHIa_t.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/dKKRBauR.js">
 </head>
 
 <body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
   <div style="display: contents">
 
-    <!-- 背景画像 -->
-    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('/slide2.jpg')"></div>
+    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('images/slide2.jpg')"></div>
 
-    <!-- ヘッダー -->
     <header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
       <div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
-        <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-          <img src="./log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+        <a href="index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
+          <img src="images/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
           <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
             非破壊センシング研究室
           </span>
         </a>
         <nav class="hidden sm:flex flex-nowrap justify-end gap-x-4 sm:gap-x-6 text-[1rem] sm:text-lg md:text-xl font-medium whitespace-nowrap">
-          <a href="./Introduction.html" class="text-gray-500 hover:text-black">Introduction</a>
-          <a href="./Project.html" class="text-gray-500 hover:text-black">Project</a>
-          <a href="./Members.html" class="text-gray-500 hover:text-black">Members</a>
-          <a href="./Access.html" class="text-gray-500 hover:text-black">Access</a>
+          <a href="Introduction.html" class="text-gray-500 hover:text-black">Introduction</a>
+          <a href="Project.html" class="text-gray-500 hover:text-black">Project</a>
+          <a href="Members.html" class="text-gray-500 hover:text-black">Members</a>
+          <a href="Access.html" class="text-gray-500 hover:text-black">Access</a>
         </nav>
         <button id="menu-button" class="sm:hidden text-2xl text-gray-800 ">☰</button>
       </div>
     
         <nav id="mobile-menu" class="sm:hidden hidden flex flex-col items-center gap-y-4 text-lg font-medium text-gray-700 bg-white/90 shadow-md rounded-xl py-4 mt-4 mx-auto">
-          <a href="./Introduction.html" class="hover:text-black">Introduction</a>
-          <a href="./Project.html" class="hover:text-black">Project</a>
-          <a href="./Members.html" class="hover:text-black">Members</a>
-          <a href="./Access.html" class="hover:text-black">Access</a>
+          <a href="Introduction.html" class="hover:text-black">Introduction</a>
+          <a href="Project.html" class="hover:text-black">Project</a>
+          <a href="Members.html" class="hover:text-black">Members</a>
+          <a href="Access.html" class="hover:text-black">Access</a>
         </nav>
 
       </div>
