--- a/Members.html
+++ b/Members.html
@@ -1,59 +1,61 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="./images/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		
-		<link href="./_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CN6vCBXI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D5td2Ix7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BJZaEuHy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/5HOrd2lw.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BPjcHWtB.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.B8t3zgvK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CHSGCjcG.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bzlsns2q.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/lDHG2_yA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/wh5EvfPl.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bj1mbKBr.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.CYVJVkor.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BIMLuOf1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C0WCr0ZI.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/6.Dw_Dco0p.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/hJLHIa_t.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/dKKRBauR.js">
-	</head>
-	<body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
-	
-		<div style="display: contents">
-			<div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('./images/slide2.jpg')"></div> 
-			<header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
-				<div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
-				  <a href="./index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
-					<img src="./images/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
-					<span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
-					  非破壊センシング研究室
-					</span>
-				  </a>
-				  <nav class="hidden sm:flex flex-nowrap justify-end gap-x-4 sm:gap-x-6 text-[1rem] sm:text-lg md:text-xl font-medium whitespace-nowrap">
-					<a href="./Introduction.html" class="text-gray-500 hover:text-black">Introduction</a>
-					<a href="./Project.html" class="text-gray-500 hover:text-black">Project</a>
-					<a href="./Members.html" class="text-gray-500 hover:text-black">Members</a>
-					<a href="./Access.html" class="text-gray-500 hover:text-black">Access</a>
-				  </nav>
-				  <button id="menu-button" class="sm:hidden text-2xl text-gray-800 ">☰</button>
-				</div>
-			  
-				  <nav id="mobile-menu" class="sm:hidden hidden flex flex-col items-center gap-y-4 text-lg font-medium text-gray-700 bg-white/90 shadow-md rounded-xl py-4 mt-4 mx-auto">
-					<a href="./Introduction.html" class="hover:text-black">Introduction</a>
-					<a href="./Project.html" class="hover:text-black">Project</a>
-					<a href="./Members.html" class="hover:text-black">Members</a>
-					<a href="./Access.html" class="hover:text-black">Access</a>
-				  </nav>
-		
-				</div>
-			  </header>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="images/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <link href="_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
+  <link rel="modulepreload" href="_app/immutable/entry/start.CN6vCBXI.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/D5td2Ix7.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/BJZaEuHy.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/5HOrd2lw.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/BPjcHWtB.js">
+  <link rel="modulepreload" href="_app/immutable/entry/app.B8t3zgvK.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/CHSGCjcG.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/Bzlsns2q.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/lDHG2_yA.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/wh5EvfPl.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/Bj1mbKBr.js">
+  <link rel="modulepreload" href="_app/immutable/nodes/0.CYVJVkor.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/BIMLuOf1.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/C0WCr0ZI.js">
+  <link rel="modulepreload" href="_app/immutable/nodes/5.Cywm4_Y0.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/hJLHIa_t.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/dKKRBauR.js">
+</head>
+
+<body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
+  <div style="display: contents">
+
+    <div class="fixed inset-0 bg-cover bg-center z-[-10]" style="background-image: url('images/slide2.jpg')"></div>
+
+    <header class="fixed top-0 left-0 z-50 w-full bg-white/70 shadow-sm px-4 py-3">
+      <div class="flex flex-wrap items-center justify-between gap-y-4 px-2 sm:px-6">
+        <a href="index.html" class="flex items-center gap-3 flex-shrink min-w-0 mx-auto sm:mx-0 hover:opacity-80 transition">
+          <img src="images/log.png" alt="ロゴ" class="h-10 sm:h-14 w-auto object-contain flex-shrink-0">
+          <span class="font-semibold text-gray-800 truncate text-[1rem] xs:text-[1.1rem] sm:text-[1.3rem] md:text-2xl lg:text-3xl" style="max-width: 70vw;">
+            非破壊センシング研究室
+          </span>
+        </a>
+        <nav class="hidden sm:flex flex-nowrap justify-end gap-x-4 sm:gap-x-6 text-[1rem] sm:text-lg md:text-xl font-medium whitespace-nowrap">
+          <a href="Introduction.html" class="text-gray-500 hover:text-black">Introduction</a>
+          <a href="Project.html" class="text-gray-500 hover:text-black">Project</a>
+          <a href="Members.html" class="text-gray-500 hover:text-black">Members</a>
+          <a href="Access.html" class="text-gray-500 hover:text-black">Access</a>
+        </nav>
+        <button id="menu-button" class="sm:hidden text-2xl text-gray-800 ">☰</button>
+      </div>
+    
+        <nav id="mobile-menu" class="sm:hidden hidden flex flex-col items-center gap-y-4 text-lg font-medium text-gray-700 bg-white/90 shadow-md rounded-xl py-4 mt-4 mx-auto">
+          <a href="Introduction.html" class="hover:text-black">Introduction</a>
+          <a href="Project.html" class="hover:text-black">Project</a>
+          <a href="Members.html" class="hover:text-black">Members</a>
+          <a href="Access.html" class="hover:text-black">Access</a>
+        </nav>
+
+      </div>
+    </header>
 			<div class="pt-40 pb-16 px-6 sm:px-16">
 				<h1 class="text-4xl sm:text-5xl font-bold text-white text-left drop-shadow-xl">Members</h1>
 			</div> 
@@ -70,7 +72,7 @@
 					<section class="space-y-8">
 						<h2 class="text-2xl sm:text-3xl font-bold text-gray-800 border-b pb-2">M1</h2> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="./images/FukuchiTshubasa.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
+							<img src="images/FukuchiTshubasa.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">福地 翼（Fukuchi Tsubasa）</h3> 
 								<div class="h-2"></div>
@@ -81,7 +83,7 @@
 							</div>
 						</div> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="./images/MatshunagaJotaro.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
+							<img src="images/MatshunagaJotaro.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
 							<div class="space-y-2 max-w-3xl">
 							<h3 class="text-xl font-semibold text-gray-800">松永 丞太郎（Matsunaga Jotaro）</h3>
 							<div class="h-2"></div> 
@@ -92,7 +94,7 @@
 							</div>
 						</div>
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="./images/yamadakeigo.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
+							<img src="images/yamadakeigo.png" alt="M1写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">山田 圭吾（Yamada Keigo）</h3>
 								<div class="h-2"></div> 
@@ -106,7 +108,7 @@
 					<section class="space-y-8">
 						<h2 class="text-2xl sm:text-3xl font-bold text-gray-800 border-b pb-2">B4</h2> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="./images/KasutaSora.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
+							<img src="images/KasutaSora.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md">
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">糟谷 空（Kasuya Sora）</h3>
 								<div class="h-2"></div>
@@ -117,7 +119,7 @@
 							</div>
 						</div>
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="./images/KatoKeisuke.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
+							<img src="images/KatoKeisuke.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">加藤 圭介（Kato Keisuke）</h3>
 								<div class="h-2"></div> <p class="text-gray-700 text-base leading-relaxed">自己紹介：<br>遠回りをして帰ることが好きです。</p>
@@ -126,7 +128,7 @@
 							</div>
 						</div> 
 						<div class="flex flex-col md:flex-row gap-6 items-start">
-							<img src="./images/sTomimatsuHaruki.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
+							<img src="images/TomimatsuHaruki.png" alt="B4写真" class="w-40 h-40 object-cover rounded-lg shadow-md"> 
 							<div class="space-y-2 max-w-3xl">
 								<h3 class="text-xl font-semibold text-gray-800">富松 大輝（Tomimatsu Haruki）</h3> 
 								<div class="h-2"></div>
