--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link href="_app/immutable/assets/3.Dy78nlGK.css" rel="stylesheet">
-  <link rel="modulepreload" href="_app/immutable/entry/start.CN6vCBXI.js">
+  <!-- <link rel="modulepreload" href="_app/immutable/entry/start.CN6vCBXI.js">
   <link rel="modulepreload" href="_app/immutable/chunks/D5td2Ix7.js">
   <link rel="modulepreload" href="_app/immutable/chunks/BJZaEuHy.js">
   <link rel="modulepreload" href="_app/immutable/chunks/5HOrd2lw.js">
@@ -23,7 +23,7 @@
   <link rel="modulepreload" href="_app/immutable/nodes/3.BNgYmy2E.js">
   <link rel="modulepreload" href="_app/immutable/chunks/DJ4Ea6W_.js">
   <link rel="modulepreload" href="_app/immutable/chunks/1VidrSLw.js">
-  <link rel="modulepreload" href="_app/immutable/chunks/hJLHIa_t.js">
+  <link rel="modulepreload" href="_app/immutable/chunks/hJLHIa_t.js"> -->
 </head>
 
 <body class="overflow-x-hidden" data-sveltekit-preload-data="hover">
