トップページ行間調整

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 
       <div class="flex items-center justify-center min-h-screen px-4 sm:px-8">
         <h2 class="text-white/90 font-medium text-center leading-none
-        max-w-screen-sm sm:max-w-screen-md md:max-w-screen-lg lg:max-w-screen-xl" 
-            style="font-size: clamp(0.5rem, 2.5vw, 1.75rem); white-space: pre-line;">
-          外見だけではわからないモノの状態や内部構造を、<br>
-          様々な周波数帯域の電磁波を照射して反射・透過した信号を<br>
-          検出・画像化することにより観察する研究をしています。<br>
-          得られたデータを解析することで、モノの健全性を<br>
-          非破壊・非接触で診断することに有益な情報を抽出します。
+        max-w-screen-sm sm:max-w-screen-md md:max-w-screen-lg lg:max-w-screen-xl"
+            style="font-size: clamp(0.5rem, 2.5vw, 1.75rem); white-space: normal; line-height: 1.5;">
+          <span class="block">外見だけではわからないモノの状態や内部構造を、</span>
+          <span class="block">様々な周波数帯域の電磁波を照射して反射・透過した信号を</span>
+          <span class="block">検出・画像化することにより観察する研究をしています。</span>
+          <span class="block">得られたデータを解析することで、モノの健全性を</span>
+          <span class="block">非破壊・非接触で診断することに有益な情報を抽出します。</span>
         </h2>
       </div>
 
